--- a/files/order_info.htm
+++ b/files/order_info.htm
@@ -1,4 +1,4 @@
-<div class="client">
+<div class="order_info">
   {% IF FORM_NOTICE %}<div class="{% IF FORM_NOTICE_IS_GOOD %}success{% ELSE %}warning{% ENDIF %}">{FORM_NOTICE | nl2br}</div>{% ENDIF %}
   <h3 class="client__title">Данные заказа</h3>
   <table class="table-box">
