--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -26,7 +26,7 @@
   <!-- /Если нет товаров, выводим сообщение пользователю -->
   
   <!-- Если нет товаров, либо у пользователя не сработало javascript ограничение на фильтре по товарам и так получилось что их не нашлось, отобразим блок изменяющий отображение данных выдачи товаров -->
-  {% IFNOT IS_FULL_CATALOG && goods_empty=0 || goods_filters_empty=0 %}
+  {% IFNOT IS_FULL_CATALOG && goods_empty=0 || goods_filters_empty=1 %}
   <!-- Верхний блок, изменяющий отображение данных выдачи товаров -->
   <div class="toolbar">
     <noindex>
@@ -89,7 +89,7 @@
     {% IF GOODS_VIEW_TYPE=1 %}
     <div class="products__grid">
       {% FOR goods %}
-      <div class="product__item {% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && goods.MAX_REST_VALUE=0 %}empty{% ENDIF %}" itemscope itemtype="https://schema.org/Product">
+      <div class="product__item {% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && goods.MAX_REST_VALUE=0 %}empty{% ENDIF %} {% IF goods.COUNT_MODIFICATION > 1 %} hasMod{% ENDIF %}" itemscope itemtype="https://schema.org/Product">
         <span class="top"></span>
         <span class="left"></span>
         <span class="right"></span>
@@ -252,7 +252,7 @@
     {% ELSE %}
     <div class="products__list">
       {% FOR goods %}
-      <div class="product__item {% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && goods.MAX_REST_VALUE=0 %}empty{% ENDIF %}" itemscope itemtype="https://schema.org/Product">
+      <div class="product__item {% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && goods.MAX_REST_VALUE=0 %}empty{% ENDIF %} {% IF goods.COUNT_MODIFICATION > 1 %} hasMod{% ENDIF %}" itemscope itemtype="https://schema.org/Product">
         <form action="{CART_ADD_GOODS_MODIFICATION_URL | url_amp}" method="post" class="product__form-{goods.MIN_PRICE_NOW_ID} goodsListForm">
           <input type="hidden" name="hash" value="{HASH}" />
           <input type="hidden" name="form[goods_from]" value="{goods.GOODS_FROM}" />
