--- a/files/order_info.htm
+++ b/files/order_info.htm
@@ -14,9 +14,9 @@
     <tr>
       <td class="cell1"><span>Сумма заказа:</span></td>
       <td class="cell2">
-        {ORDER_SUM | money}
+        <div class="price__now">{ORDER_SUM | money}</div>
         {% IF ORDER_SUM_WITHOUT_DISCONT != ORDER_SUM %}
-        <br /><span style="color:#888888;"><s>{ORDER_SUM_WITHOUT_DISCONT | money("i")}</s> без учета скидки</span>
+        <div class="price__old">{ORDER_SUM_WITHOUT_DISCONT | money}</div>
         {% ENDIF %}
       </td>
     </tr>
