[fix] Отображение товаров в категориях

--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -26,7 +26,7 @@
   <!-- /Если нет товаров, выводим сообщение пользователю -->
   
   <!-- Если нет товаров, либо у пользователя не сработало javascript ограничение на фильтре по товарам и так получилось что их не нашлось, отобразим блок изменяющий отображение данных выдачи товаров -->
-  {% IFNOT IS_FULL_CATALOG && goods_empty=0 || goods_filters_empty=1 %}
+  {% IFNOT IS_FULL_CATALOG && goods_empty=0 %}
   <!-- Верхний блок, изменяющий отображение данных выдачи товаров -->
   <div class="toolbar">
     <noindex>
