--- a/files/html.htm
+++ b/files/html.htm
@@ -1437,7 +1437,7 @@
                 </div>
                 {% ENDFOR %}
                 <div class="filter__list filters__buttons">
-                  <a href="{PAGE_CANONICAL}" class="goodsFilterClear button button3" title="Очистить фильры"><span>Очистить фильры</span></a>
+                  <a href="{PAGE_CANONICAL}" class="goodsFilterClear button button3 small" title="Очистить фильры"><span>Очистить фильры</span></a>
                 </div>
               </form>
             </div>
