--- a/files/html.htm
+++ b/files/html.htm
@@ -761,7 +761,7 @@
 
     <!-- Товары на главной -->
     {% IFNOT index_page_goods_empty %}
-    <div id="pdt__sale" class="pdt__sale">
+    <section id="pdt__sale" class="pdt__sale">
       <div class="container">
         <div class="preloader"><div class="loading"></div></div>
         <div class="block__title block__nav">
@@ -930,7 +930,7 @@
           {% ENDFOR %}
         </div>
       </div>
-    </div>
+    </section>
     {% ENDIF %}
 
     <!-- Обратная связь -->
