[fix] Допы в корзине и в карточке

--- a/files/cart.htm
+++ b/files/cart.htm
@@ -86,7 +86,7 @@
     </div>
   </div>
 
-  <!-- Товары на главной -->
+  <!-- Добавьте к заказу -->
   {% IFNOT cart_related_goods_empty %}
   <div class="related__cart add__goods">
     <div class="block__title">
